link files together

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Color Palette Generator</title>
 </head>
 <body>
     <button id="regenerateButton">Regenerate</button>
@@ -12,5 +13,6 @@
     <div></div>
     <div></div>
     <div></div>
+    <script src="script.js"></script>
 </body>
 </html>
