--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Color Palette Generator</title>
 </head>
+
 <body>
-    <button id="regenerateButton">Regenerate</button>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <header>
+            <h1>Colours Generator</h1>
+            <p>Press <button id="regenerateButton">Regenerate</button> to choose a new palette.</p>
+    </header>
+    <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div> 
     <script src="script.js"></script>
 </body>
 </html>
+
