feat: Add interactive color change functionality and Styling updates for the color divs and interactive elements

--- a/index.html
+++ b/index.html
@@ -10,14 +10,44 @@
 <body>
     <header>
             <h1>Colours Generator</h1>
-            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new palette.</p>
+            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette.</p>
     </header>
     <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="colour">
+            <button class="lock-toggle">
+            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+        </button><br>
+        <input type="text" class="colour-input" value="#000000"/><br>
+        <button class="copy-hex">Copy</button>
+        </div>
+        <div class="colour">
+            <button class="lock-toggle">
+            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+        </button><br>
+        <input type="text" class="colour-input" value="#000000"/><br>
+        <button class="copy-hex">Copy</button>
+        </div>
+        <div class="colour">
+            <button class="lock-toggle">
+            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+        </button><br>
+        <input type="text" class="colour-input" value="#000000"/><br>
+        <button class="copy-hex">Copy</button>
+        </div>
+        <div class="colour">
+            <button class="lock-toggle">
+            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+        </button><br>
+        <input type="text" class="colour-input" value="#000000"/><br>
+        <button class="copy-hex">Copy</button>
+        </div>
+        <div class="colour">
+            <button class="lock-toggle">
+            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+        </button><br>
+        <input type="text" class="colour-input" value="#000000"/><br>
+        <button class="copy-hex">Copy</button>
+        </div>
     </div> 
     <script src="script.js"></script>
 </body>
