add text on <p> and adjust the style

--- a/index.html
+++ b/index.html
@@ -10,39 +10,39 @@
 <body>
     <header>
             <h1>Colours Generator</h1>
-            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette.</p>
+            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette. <br>Click &#x2764; to save the colour.</p>
     </header>
     <div class="container">
         <div class="colour">
-            <button class="lock-toggle">
+            <button id="savePaletteButton">
             <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         </div>
         <div class="colour">
-            <button class="lock-toggle">
+            <button id="savePaletteButton">
             <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         </div>
         <div class="colour">
-            <button class="lock-toggle">
+            <button id="savePaletteButton">
             <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         </div>
         <div class="colour">
-            <button class="lock-toggle">
+            <button id="savePaletteButton">
             <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         </div>
         <div class="colour">
-            <button class="lock-toggle">
+            <button id="savePaletteButton">
             <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
