feat:add event listeners for the copy buttons and style them

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <h1>Colours Generator</h1>
-            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette. <br>Click &#x2764; to save the colour.</p>
+            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette. <br>Click &#x2764; to save each colour.</p>
     </header>
     <div class="container">
         <div class="colour">
@@ -19,6 +19,7 @@
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
+        <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
             <button id="savePaletteButton">
@@ -26,6 +27,7 @@
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
+        <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
             <button id="savePaletteButton">
@@ -33,6 +35,7 @@
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
+        <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
             <button id="savePaletteButton">
@@ -40,6 +43,7 @@
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
+        <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
             <button id="savePaletteButton">
@@ -47,6 +51,7 @@
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
+        <p class="copied-message">Color code copied!</p>
         </div>
     </div> 
     <script src="script.js"></script>
