feat: Add lock and unlock colour functionality

--- a/index.html
+++ b/index.html
@@ -14,40 +14,65 @@
     </header>
     <div class="container">
         <div class="colour">
+            <button class="lock-toggle">
+                <img class="lock-icon" src="images/lock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="lock Icon"/>
+                <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
+            </button>
+            <br>
             <button id="savePaletteButton">
-            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+            <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
+            <button class="lock-toggle">
+                <img class="lock-icon" src="images/lock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="lock Icon"/>
+                <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
+            </button>
+            <br>
             <button id="savePaletteButton">
-            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+            <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
+            <button class="lock-toggle">
+                <img class="lock-icon" src="images/lock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="lock Icon"/>
+                <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
+            </button>
+            <br>
             <button id="savePaletteButton">
-            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+            <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
+            <button class="lock-toggle">
+                <img class="lock-icon" src="images/lock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="lock Icon"/>
+                <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
+            </button>
+            <br>
             <button id="savePaletteButton">
-            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+            <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
         <p class="copied-message">Color code copied!</p>
         </div>
         <div class="colour">
+            <button class="lock-toggle">
+                <img class="lock-icon" src="images/lock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="lock Icon"/>
+                <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
+            </button>
+            <br>
             <button id="savePaletteButton">
-            <img src="heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
+            <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
         <button class="copy-hex">Copy</button>
