Add color palette export functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
             <h1>Colours Generator</h1>
-            <p>Press <button id="regenerateButton">Regenerate</button>to choose a new colour palette. <br>Click &#x2764; to save each colour.</p>
+            <p>
+                Press <button id="regenerateButton" class="button-spacing">Regenerate</button> to choose a new color palette.<br>
+                Click <button id="exportButton">Export</button> color palette.
+              </p>              
     </header>
     <div class="container">
         <div class="colour">
