Add comments and create README

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
             </button>
             <br>
-            <button id="savePaletteButton">
+            <button id="savePaletteButton1">
             <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
@@ -35,7 +35,7 @@
                 <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
             </button>
             <br>
-            <button id="savePaletteButton">
+            <button id="savePaletteButton2">
             <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
@@ -48,7 +48,7 @@
                 <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
             </button>
             <br>
-            <button id="savePaletteButton">
+            <button id="savePaletteButton3">
             <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
@@ -61,7 +61,7 @@
                 <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
             </button>
             <br>
-            <button id="savePaletteButton">
+            <button id="savePaletteButton4">
             <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
@@ -74,7 +74,7 @@
                 <img class="unlock-icon" src="images/unlock-alt-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="unlock Icon"/>
             </button>
             <br>
-            <button id="savePaletteButton">
+            <button id="savePaletteButton5">
             <img src="images/heart-svgrepo-com.svg" style="width: 24px; height: 24px;" alt="Heart Icon"/>
         </button><br>
         <input type="text" class="colour-input" value="#000000"/><br>
