feat: Add responsive mobile styles and apply .button-common

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
             <h1>Colours Generator</h1>
             <p>
-                Press <button id="regenerateButton" class="button-spacing">Regenerate</button> to choose a new color palette.<br>
-                Click <button id="exportButton">Export</button> color palette.
+                Press <button id="regenerateButton" class="button-spacing button-common">Regenerate</button> to choose a new color palette.<br>
+                Click <button id="exportButton" class="button-common">Export</button> color palette.
               </p>              
     </header>
     <div class="container">
